--- a/app/src/main/res/layout/basic_product_info.xml
+++ b/app/src/main/res/layout/basic_product_info.xml
@@ -1,29 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_width="wrap_content"
+    android:layout_height="fill_parent"
     android:orientation="horizontal"
-    android:padding="5dip" >
+    android:background="#FFFFFF">
 
     <ImageView
         android:id="@+id/image"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="fill_parent"
+        android:layout_weight="80"
+        />
 
     <TextView
         android:id="@+id/description"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dip"
+        android:layout_height="fill_parent"
         android:layout_below="@id/image"
-        android:textColor="#343434"
-        android:textSize="12sp" />
+        android:textSize="12sp"
+        android:paddingLeft="16dp"
+        android:paddingTop="0dp"
+        />
 
     <TextView
         android:id="@+id/price"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_below="@id/description"
         android:textStyle="bold"
-        android:typeface="sans" />
+        android:typeface="sans"
+        android:paddingLeft="16dp"
+        />
+
+    <View
+        android:id="@+id/divider"
+        style="@style/Divider"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_below="@id/price"
+        />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:orientation="horizontal"
+        android:paddingLeft="16dp"
+        android:layout_below="@id/divider">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/buy"
+            />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/share"
+            />
+    </LinearLayout>
 </RelativeLayout>
