--- a/app/src/main/res/layout/basic_product_info.xml
+++ b/app/src/main/res/layout/basic_product_info.xml
@@ -7,37 +7,61 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
         android:layout_weight="80"
         />
 
     <TextView
-        android:id="@+id/description"
+        android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_below="@id/image"
         android:textSize="12sp"
         android:paddingLeft="16dp"
         android:paddingTop="0dp"
+        android:textStyle="bold"
         />
 
     <TextView
         android:id="@+id/price"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
-        android:layout_below="@id/description"
+        android:layout_below="@id/name"
         android:textStyle="bold"
         android:typeface="sans"
         android:paddingLeft="16dp"
         />
 
+    <TextView
+        android:id="@+id/discountPrice"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_toRightOf="@id/price"
+        android:layout_below="@id/name"
+        android:textStyle="bold"
+        android:typeface="sans"
+        android:textColor="#FF0000"
+        android:paddingLeft="16dp"
+        />
+    <TextView
+        android:id="@+id/retailer"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_below="@id/price"
+        android:textSize="12sp"
+        android:paddingLeft="16dp"
+        android:paddingTop="0dp"
+        android:textStyle="italic"
+        />
     <View
         android:id="@+id/divider"
         style="@style/Divider"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:layout_below="@id/price"
+        android:layout_below="@id/retailer"
         />
 
     <LinearLayout
