Introduce toolbar in place of action bar

--- a/app/src/main/res/layout/activity_product_list.xml
+++ b/app/src/main/res/layout/activity_product_list.xml
@@ -6,6 +6,8 @@
     android:id="@+id/tab1"
     android:orientation="vertical">
 
+    <include layout="@layout/titlebar"/>
+
     <com.astuetz.PagerSlidingTabStrip
         android:id="@+id/tabs"
         app:pstsShouldExpand="true"
