--- a/app/src/main/res/layout/activity_browse_bags.xml
+++ b/app/src/main/res/layout/activity_browse_bags.xml
@@ -9,6 +9,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".BrowseBagsActivity">
 
+    <include layout="@layout/titlebar"/>
+
     <ListView
         android:id="@+id/product_list"
         android:layout_width="wrap_content"
