--- a/app/src/main/res/layout/brand_selection_page.xml
+++ b/app/src/main/res/layout/brand_selection_page.xml
@@ -6,7 +6,7 @@
     android:layout_height="fill_parent"
     android:id="@+id/browse_tab"
     android:orientation="vertical">
-
+    <include layout="@layout/titlebar"/>
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/brand_list"
         android:layout_width="match_parent"
