--- a/app/src/main/res/layout/basic_product_info.xml
+++ b/app/src/main/res/layout/basic_product_info.xml
@@ -23,6 +23,7 @@
         android:paddingLeft="16dp"
         android:paddingTop="0dp"
         android:textStyle="bold"
+        android:textColor="@color/primaryText"
         />
 
     <TextView
@@ -33,6 +34,7 @@
         android:textStyle="bold"
         android:typeface="sans"
         android:paddingLeft="16dp"
+        android:textColor="@color/primaryText"
         />
 
     <TextView
@@ -55,6 +57,7 @@
         android:paddingLeft="16dp"
         android:paddingTop="0dp"
         android:textStyle="italic"
+        android:textColor="@color/secondaryText"
         />
     <View
         android:id="@+id/divider"
