--- a/app/src/main/res/layout/titlebar.xml
+++ b/app/src/main/res/layout/titlebar.xml
@@ -5,9 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:background="?attr/colorPrimary"
-    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
     android:elevation="4dp"
+    android:minHeight="?attr/actionBarSize"
+    app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
     >
 
     <TextView
@@ -15,7 +15,8 @@
         android:layout_height="match_parent"
         android:text="@string/app_name"
         android:textSize="20dp"
-        android:gravity = "center"
+        android:gravity="center_vertical"
+        android:textColor="@color/primaryTextLight"
         android:textStyle="bold"
         android:id="@+id/toolbar_title" />
 </android.support.v7.widget.Toolbar>
