--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimaryDark">#0097A7</color>
-    <color name="colorPrimary">#00BCD4</color>
-    <color name="colorPrimaryLight">#B2EBF2</color>
+    <color name="colorPrimaryDark">#1976D2</color>
+    <color name="colorPrimary">#2196F3</color>
+    <color name="colorPrimaryLight">#BBDEFB</color>
     <color name="accentColor">#FF4081</color>
     <color name="primaryText">#212121</color>
     <color name="secondaryText">#727272</color>
