--- a/app/src/main/res/layout/basic_product_info.xml
+++ b/app/src/main/res/layout/basic_product_info.xml
@@ -1,87 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="fill_parent"
-    android:orientation="horizontal"
-    android:background="#FFFFFF">
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="150dp"
+    card_view:cardElevation="4dp">
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
-        android:layout_weight="80"
-        />
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:background="#FFFFFF"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:layout_below="@id/image"
-        android:textSize="12sp"
-        android:paddingLeft="16dp"
-        android:paddingTop="0dp"
-        android:textStyle="bold"
-        android:textColor="@color/primaryText"
-        />
-
-    <TextView
-        android:id="@+id/price"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:layout_below="@id/name"
-        android:textStyle="bold"
-        android:typeface="sans"
-        android:paddingLeft="16dp"
-        android:textColor="@color/primaryText"
-        />
-
-    <TextView
-        android:id="@+id/discountPrice"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:layout_toRightOf="@id/price"
-        android:layout_below="@id/name"
-        android:textStyle="bold"
-        android:typeface="sans"
-        android:textColor="#FF0000"
-        android:paddingLeft="16dp"
-        />
-    <TextView
-        android:id="@+id/retailer"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:layout_below="@id/price"
-        android:textSize="12sp"
-        android:paddingLeft="16dp"
-        android:paddingTop="0dp"
-        android:textStyle="italic"
-        android:textColor="@color/secondaryText"
-        />
-    <View
-        android:id="@+id/divider"
-        style="@style/Divider"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_below="@id/retailer"
-        />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:orientation="horizontal"
-        android:paddingLeft="16dp"
-        android:layout_below="@id/divider">
-        <Button
-            android:layout_width="wrap_content"
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="@string/buy"
-            />
-        <Button
+            android:layout_weight="80"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop" />
+
+        <TextView
+            android:id="@+id/name"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/share"
-            />
-    </LinearLayout>
-</RelativeLayout>
+            android:layout_height="fill_parent"
+            android:layout_below="@id/image"
+            android:paddingLeft="16dp"
+            android:paddingTop="0dp"
+            android:textColor="@color/primaryText"
+            android:textSize="12sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/price"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_below="@id/name"
+            android:paddingLeft="16dp"
+            android:textColor="@color/primaryText"
+            android:textStyle="bold"
+            android:typeface="sans" />
+
+        <TextView
+            android:id="@+id/discountPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_below="@id/name"
+            android:layout_toRightOf="@id/price"
+            android:paddingLeft="16dp"
+            android:textColor="#FF0000"
+            android:textStyle="bold"
+            android:typeface="sans" />
+
+        <TextView
+            android:id="@+id/retailer"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_below="@id/price"
+            android:paddingLeft="16dp"
+            android:paddingTop="0dp"
+            android:textColor="@color/secondaryText"
+            android:textSize="12sp"
+            android:textStyle="italic" />
+
+        <View
+            android:id="@+id/divider"
+            style="@style/Divider"
+            android:layout_below="@id/retailer"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_below="@id/divider"
+            android:orientation="horizontal"
+            android:paddingLeft="16dp">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/buy" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/share" />
+        </LinearLayout>
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
