--- a/app/src/main/res/layout/products_list.xml
+++ b/app/src/main/res/layout/products_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
@@ -7,11 +7,10 @@
     android:paddingRight="0dp"
     android:paddingTop="0dp"
     android:paddingBottom="0dp">
-
     <ListView
         android:id="@+id/product_list"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:dividerHeight="7dp"
-        android:layout_gravity="left" />
-</RelativeLayout>
+        android:layout_gravity="start|top"/>
+</LinearLayout>
