--- a/app/src/main/res/layout/activity_product_list.xml
+++ b/app/src/main/res/layout/activity_product_list.xml
@@ -12,7 +12,14 @@
         android:orientation="vertical"
         android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-        <include layout="@layout/titlebar"/>
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/titlebar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:minHeight="?attr/actionBarSize"
+            >
+        </android.support.v7.widget.Toolbar>
 
         <android.support.design.widget.TabLayout
             android:id="@+id/sliding_tabs"
