--- a/app/src/main/res/layout/products_list.xml
+++ b/app/src/main/res/layout/products_list.xml
@@ -1,16 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent"
-    android:paddingLeft="0dp"
-    android:paddingRight="0dp"
-    android:paddingTop="0dp"
-    android:paddingBottom="0dp">
-    <ListView
-        android:id="@+id/product_list"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:dividerHeight="7dp"
-        android:layout_gravity="start|top"/>
-</LinearLayout>
+<android.support.v7.widget.RecyclerView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/recyclerView"
+    android:scrollbars="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" />
