--- a/app/src/main/res/layout/activity_browse.xml
+++ b/app/src/main/res/layout/activity_browse.xml
@@ -6,11 +6,15 @@
     android:id="@+id/tab1"
     android:orientation="vertical">
 
-    <ListView
-        android:id="@+id/product_list"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:dividerHeight="7dp"
-        android:layout_gravity="left" />
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary" />
+
+    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
