--- a/app/src/main/res/layout/basic_product_info.xml
+++ b/app/src/main/res/layout/basic_product_info.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="150dp"
     app:cardUseCompatPadding="true">
+
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -14,11 +13,10 @@
 
         <ImageView
             android:id="@+id/image"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="80"
+            android:layout_width="360dp"
+            android:layout_height="340dp"
             android:adjustViewBounds="true"
-            android:scaleType="centerCrop" />
+            android:scaleType="fitXY" />
 
         <TextView
             android:id="@+id/name"
