--- a/app/src/main/res/layout/basic_product_info.xml
+++ b/app/src/main/res/layout/basic_product_info.xml
@@ -69,8 +69,8 @@
             android:layout_marginRight="16dp" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_below="@id/divider"
             android:orientation="horizontal"
             android:paddingLeft="16dp">
@@ -78,11 +78,18 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/like" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:text="@string/buy" />
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:text="@string/share" />
         </LinearLayout>
     </RelativeLayout>
