--- a/app/src/main/res/layout/basic_product_info.xml
+++ b/app/src/main/res/layout/basic_product_info.xml
@@ -70,27 +70,68 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_below="@id/divider"
             android:orientation="horizontal"
             android:paddingLeft="16dp">
 
-            <Button
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/like" />
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/buy" />
+                android:layout_height="match_parent"
+                android:layout_weight="1">
 
-            <Button
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:background="@color/primaryTextLight"
+                    android:drawableLeft="@drawable/ic_favorite_outline"
+                    android:drawablePadding="0dp"
+                    android:gravity="center"
+                    android:text="@string/like"
+                    android:textAllCaps="false"
+                    android:textColor="@color/secondaryText" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/share" />
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:background="@color/primaryTextLight"
+                    android:drawableLeft="@drawable/ic_action_shopping_cart"
+                    android:drawablePadding="0dp"
+                    android:gravity="center"
+                    android:text="@string/buy"
+                    android:textAllCaps="false"
+                    android:textColor="@color/secondaryText" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:background="@color/primaryTextLight"
+                    android:drawablePadding="0dp"
+                    android:drawableLeft="@drawable/ic_social_share"
+                    android:gravity="center"
+                    android:text="@string/share"
+                    android:textAllCaps="false"
+                    android:textColor="@color/secondaryText" />
+            </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
 </android.support.v7.widget.CardView>
