--- a/app/src/main/res/layout/basic_product_info.xml
+++ b/app/src/main/res/layout/basic_product_info.xml
@@ -75,17 +75,18 @@
             android:orientation="horizontal"
             android:paddingLeft="16dp">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
 
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
-                    android:background="@color/primaryTextLight"
                     android:drawableLeft="@drawable/ic_favorite_outline"
                     android:drawablePadding="0dp"
                     android:gravity="center"
@@ -95,16 +96,16 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1">
-
+                android:layout_weight="1"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
-                    android:background="@color/primaryTextLight"
                     android:drawableLeft="@drawable/ic_action_shopping_cart"
                     android:drawablePadding="0dp"
                     android:gravity="center"
@@ -113,20 +114,19 @@
                     android:textColor="@color/secondaryText" />
             </LinearLayout>
 
-
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1">
-
+                android:layout_weight="1"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
-                    android:background="@color/primaryTextLight"
-                    android:drawablePadding="0dp"
                     android:drawableLeft="@drawable/ic_social_share"
+                    android:drawablePadding="0dp"
                     android:gravity="center"
                     android:text="@string/share"
                     android:textAllCaps="false"
