--- a/app/src/main/res/layout/basic_product_info.xml
+++ b/app/src/main/res/layout/basic_product_info.xml
@@ -73,7 +73,8 @@
             android:layout_height="match_parent"
             android:layout_below="@id/divider"
             android:orientation="horizontal"
-            android:paddingLeft="16dp">
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp">
 
 
             <LinearLayout
