--- a/app/src/main/res/layout/brand_selection_page.xml
+++ b/app/src/main/res/layout/brand_selection_page.xml
@@ -6,6 +6,13 @@
     android:layout_height="fill_parent"
     android:id="@+id/browse_tab"
     android:orientation="vertical">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary" />
+
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/brand_list"
         android:layout_width="match_parent"
