--- a/app/src/main/res/layout/basic_product_info.xml
+++ b/app/src/main/res/layout/basic_product_info.xml
@@ -2,7 +2,10 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="wrap_content"
+    android:id="@+id/cardView"
+    android:layout_marginLeft="2dp"
+    android:layout_marginRight="2dp"
     app:cardUseCompatPadding="true">
 
     <RelativeLayout
@@ -14,7 +17,7 @@
         <ImageView
             android:id="@+id/image"
             android:layout_width="360dp"
-            android:layout_height="340dp"
+            android:layout_height="300dp"
             android:adjustViewBounds="true"
             android:scaleType="fitXY" />
 
