--- a/app/src/main/res/layout/basic_product_info.xml
+++ b/app/src/main/res/layout/basic_product_info.xml
@@ -16,10 +16,10 @@
 
         <ImageView
             android:id="@+id/image"
-            android:layout_width="360dp"
-            android:layout_height="300dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:adjustViewBounds="true"
-            android:scaleType="fitXY" />
+             />
 
         <TextView
             android:id="@+id/name"
